index.css
* {
    font-family: 'Crimson Text', serif;
    color: black;
}

h1 {
    font-size: 72px
}

test {
    border: 1px solid red;
}

body {
    background-color: #FFF1E0;
}

.portfolio {
    background-color: #FFF9F5;
}

#container {
    height: 90vh;
    width: 100%;
    position: relative;
}

#render {
    display: block;
    position: absolute;
    z-index: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition: opacity 1500ms ease-out;
    /* border: 1px solid black; */
}

